[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygmdl"
version = "0.1.0"
description = "A Python implementation of the Gaussian Mixture Descriptors Learner (GMDL)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12, <3.14"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/emanuelrgb01/pygmdl"
Repository = "https://github.com/emanuelrgb01/pygmdl"
Issues = "https://github.com/emanuelrgb01/pygmdl/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]